--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "input-otp": "^1.2.5",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "node-appwrite": "^14.1.0",
+    "nodemailer": "^7.0.11",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
     "recharts": "^2.13.3",
+    "resend": "^6.5.2",
     "tailwind-merge": "^2.5.4",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
